[fix] footer overflow bug

--- a/src/components/homeindex/Header.scss
+++ b/src/components/homeindex/Header.scss
@@ -1,12 +1,10 @@
 @import '~common.scss';
 
 :local(.container){
-	position: absolute;
+	position: relative;
 	z-index: 2;
 
 	height: 4em;
-	top: 0px;
-	left: 0px;
 	border-bottom: $border-dark;
 
 	display: flex;	
