--- a/src/containers/FootTabContainer.scss
+++ b/src/containers/FootTabContainer.scss
@@ -1,8 +1,9 @@
 @import '~common.scss';
 
 :local(.container){
-	z-index: 2;
 	position: absolute;
+	z-index: 2;
+	background-color: white;
 	bottom: 0;
 	left: 0;
 	height: 4.2em;
